Bug 1113389 - loading google creates accessibles without firing show events, r=tbsaunde